[package]
name = "ccc"
version = "0.4.3"
edition = "2024"
description = "A Claude Code hook that automatically creates a commit whenever changes are made. You can also use this as a standalone commit message generator from git diffs."

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "env"] }
daemonize = "0.5.0"
git2 = "0.20.2"
gix = "0.73.0"
jiff = "0.2.15"
regex = "1.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

[profile.dev]
lto = true
codegen-units = 1
panic = "abort"
